_sass/_home.sass
section
    .content
        padding: 50pt 0 50pt 0

#part-2
    background-color: $primary-color
    color: $on-primary-color

    h2
        font: 600 $font-size-big $font-clash
        text-align: center
        margin: 0 0 45pt 0

    .items
        overflow-x: scroll
        overflow-y: hidden
        display: flex
        gap: 10pt
        align-items: center
        justify-content: center
        flex-direction: column

    @media screen and (min-width: 500pt)
        .items
            flex-direction: row

    @media screen and (max-width: 760pt)
        .items
            justify-content: normal

    .item
        background-color: $card-color
        width: 197pt
        min-width: 197pt
        border: 2pt solid $card-border-color
        border-radius: 12pt
        overflow: clip

        img
            object-fit: cover
            width: 100%
            height: 56%

        h3
            font: 600 $font-size-big $font-clash
            text-align: center
            color: $text-color

        p
            font: 400 $font-size-xsmall $font-inter
            color: $text-color-light
            padding: 0pt 7pt 20pt 7pt
            text-align: justify

#part-3
    h2
        font: 600 $font-size-big $font-clash
    .testimony
        color: $text-color-light
        margin: 0 0 20pt 0
        h3
            font: 900 $font-size-regular $font-inter
        p
            font: 900 $font-size-xsmall $font-inter
        .caption
            font: 400 $font-size-xsmall $font-inter

